<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapsInmobiliariaFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.principal.inmobiliariaconlaraandroid.ui.perfil.HomeFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.principal.inmobiliariaconlaraandroid.ui.gallery.GalleryFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.principal.inmobiliariaconlaraandroid.ui.slideshow.SlideshowFragment"
        android:label="@string/inquilinos"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/mapsInmobiliariaFragment"
        android:name="com.principal.inmobiliariaconlaraandroid.ui.ubicacion.MapsInmobiliariaFragment"
        android:label="@string/ubicacion_inmobiliaria"
        tools:layout="@layout/fragment_maps_inmobiliaria" />
    <fragment
        android:id="@+id/contratosFragment"
        android:name="com.principal.inmobiliariaconlaraandroid.ui.contratos.ContratosFragment"
        android:label="@string/contratos"
        tools:layout="@layout/fragment_contratos" />
    <fragment
        android:id="@+id/logoutFragment"
        android:name="com.principal.inmobiliariaconlaraandroid.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
</navigation>